--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -122,7 +122,7 @@ const bandas = [
       </p>
 
       <div class="flex gap-4 mt-8">
-        <a href="/eventos" class="hero-button fade-in">
+        <a href="/Cliente/BoletosCliente" class="hero-button fade-in">
           Revive
         </a>
       </div>
